syntax = "proto3";

package product;

service ProductService {
  rpc CreateProduct (CreateProductRequest) returns (CreateProductResponse);
  rpc GetProduct (GetProductRequest) returns (GetProductResponse);
  rpc ListProducts (ListProductsRequest) returns (ListProductsResponse);
}

message CreateProductRequest {
  string name = 1;
  uint32 price = 2;
  uint32 quantity = 3;
}

message CreateProductResponse {
  Product product = 1;
}

message GetProductRequest {
  uint32 id = 1;
}

message GetProductResponse {
  Product product = 1;
}

message ListProductsRequest {}

message ListProductsResponse {
  repeated Product products = 1;
}

message Product {
  uint32 id = 1;
  string name = 2;
  uint32 price = 3;
  uint32 quantity = 4;
}
